--- a/main.html
+++ b/main.html
@@ -8,8 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	
+
+
+	<div id="text">
+		<p>My current favourite song is
+			<a href="https://youtu.be/shSUDi4b2y8">Gunehgaar</a>
+		</p>
+	</div>
 
 </body>
 
