--- a/main.html
+++ b/main.html
@@ -12,8 +12,7 @@
 
 
 	<div id="text">
-		<p>My current favourite song is
-			<a href="https://youtu.be/shSUDi4b2y8">Gunehgaar</a>
+		<p>My current favourite song is <a href="https://youtu.be/shSUDi4b2y8">&lt;Gunehgaar&gt;</a>
 		</p>
 	</div>
 
